--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li>getting shmoney</li>
   </ul>
     <hr>
-  <p>I'm not that interesting but if you desire to know more, click <a href="file:///C:/Users/16148/Desktop/New%20folder/web%20dev%20atom/hobbies.html"><strong>here</strong></a>. For a brief overview of my lifes timeline, refer to the table below.</p>
+  <p>I'm not that interesting but if you desire to know more, click <a href="hobbies-fixed.html"><strong>here</strong></a>. For a brief overview of my lifes timeline, refer to the table below.</p>
   <h3>My Timeline</h3>
   <table border=1 color=red>
    <thead>
