--- a/hobbies-fixed.html
+++ b/hobbies-fixed.html
@@ -25,7 +25,7 @@
     <hr>
 
     <p>I've worked at a few different places so far in my career but to keep it short why don't you just view my resume?</p>
-    <p>Go ahead and click <a href="file:///C:/Users/16148/Downloads/Jordan-(Jay)-Johnson.pdf">here</a> to view the work experience I have under my belt.</p>
+    <p>Go ahead and click <a href="Jordan-(Jay)-Johnson.pdf">here</a> to view the work experience I have under my belt.</p>
     <hr size=6 color=maroon />
 
 
