Update-hobbies-fixed.HTML
Added resume link from Indeed

--- a/hobbies-fixed.html
+++ b/hobbies-fixed.html
@@ -25,7 +25,7 @@
     <hr>
 
     <p>I've worked at a few different places so far in my career but to keep it short why don't you just view my resume?</p>
-    <p>Go ahead and click <a href="Jordan-(Jay)-Johnson.pdf">here</a> to view the work experience I have under my belt.</p>
+    <p>Go ahead and click <a href="https://my.indeed.com/p/jordanj-yc7vs1k">here</a> to view the work experience I have under my belt.</p>
     <hr size=6 color=maroon />
 
 
