--- a/hobbies-fixed.html
+++ b/hobbies-fixed.html
@@ -11,7 +11,7 @@
 
     <h2><strong>A litte bit more about me</strong></h2>
     <hr>
-    <p>I'm pretty active within my community. I frequently create coding projects becasue this isn't just a study for me, but a real interest. My hobbies include but are not limited to,</p>
+    <p>I'm pretty active within my community. I frequently create coding projects because this isn't just a study for me, but a real interest. My hobbies include but are not limited to,</p>
     <ul>
       <li>Programming/Coding</li>
       <li>Computer Building</li>
