--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jordan's First Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <hr size=6 color=black />
